added content and structure to html. added images to assets folder

--- a/index.html
+++ b/index.html
@@ -7,4 +7,83 @@
     <title>Jeremy Stevens Portfolio</title>
 </head>
 
+<body>
+    <header>
+        <h1>Jeremy Stevens</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">About Me</a>
+                </li>
+                <li>
+                    <a href="#">Work</a>
+                </li>
+                <li>
+                    <a href="#">Contact Me</a>
+                </li>
+                <li>
+                    <a href="#">Resume</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <div>
+        <img>
+        <h3>Cool Content</h3>
+    </div>
+
+    <main>
+        <aside>
+            <h2>About Me</h2>
+            <h2>Work</h2>
+            <h2>Contact Me</h2>
+        </aside>
+
+        <Section class="about-me">
+            <p>Giberish about me.</p>
+        </Section>
+
+        <section class="work">
+            <figure id="work-1">
+                <figcaption>Work 1</figcaption>
+            </figure>
+            <figure id="work-2">
+                <figcaption>Work 2</figcaption>
+            </figure>
+            <figure id="work-3">
+                <figcaption>Work 3</figcaption>
+            </figure>
+            <figure id="work-4">
+                <figcaption>Work 4</figcaption>
+            </figure>
+            <figure id="work-5">
+                <figcaption>Work 5</figcaption>
+            </figure>
+        </section>
+
+        <section class="contact-me">
+            <ul>
+                <li>
+                    <a href="#">Number</a>
+                </li>
+                <li>
+                    <a href="#">Email</a>
+                </li>
+                <li>
+                    <a href="#">GitHub</a>
+                </li>
+                <li>
+                    <a href="#">Twitter</a>
+                </li>
+                <li>
+                    <a href="#">Spotify</a>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
+</body>
 </html>
