--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <nav class="navbar">
             <ul class="navitems">
                 <li>
-                    <a href="#">About Me</a>
+                    <a href="#about-me">About Me</a>
                 </li>
                 <li>
-                    <a href="#">Work</a>
+                    <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="#">Contact Me</a>
+                    <a href="#contact-me">Contact Me</a>
                 </li>
                 <li>
                     <a href="#">Resume</a>
@@ -30,7 +30,7 @@
     </header>
 
     <div class="imgbreak">
-        <h3 id="breakcontent">Cool Content</h3>
+        <h3 id="breakcontent">"You miss 100% of the shots you don't take."</h3>
     </div>
 
     <main>
@@ -40,39 +40,44 @@
             <h2>Contact Me</h2>
         </aside> -->
 
-        <Section class="about-me">
+        <Section class="about-me" id="about-me">
             <aside class="about-me-aside">
                 <h2>About Me</h2>
             </aside>
             <article class="about-me-box">
-                <p>Giberish about me.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
             </article>
         </Section>
 
-        <section class="work">
+        <section class="work" id="work">
             <aside class="work-aside">
                 <h2>Work</h2>
             </aside>
             <article class="work-box">
                 <figure id="work-big">
-                    <figcaption>Work 1</figcaption>
+                    <figcaption>MERN STACK</figcaption>
+                    <p>MERN Stack</p>
                 </figure>
-                <figure>
-                    <figcaption>Work 2</figcaption>
+                <figure id=work-2>
+                    <figcaption>NODE/IOT</figcaption>
+                    <p>Node/IoT</p>
                 </figure>
-                <figure>
-                    <figcaption>Work 3</figcaption>
+                <figure id="work-3">
+                    <figcaption>REACT/JAVASCRIPT/CSS</figcaption>
+                    <p>react/javascript/css</p>
                 </figure>
-                <figure>
-                    <figcaption>Work 4</figcaption>
+                <figure id="work-4">
+                    <figcaption>MERN STACK</figcaption>
+                    <p>MERN Stack</p>
                 </figure>
-                <figure>
-                    <figcaption>Work 5</figcaption>
+                <figure id="work-5">
+                    <figcaption>HTML/CSS</figcaption>
+                    <p>html/css</p>
                 </figure>
             </article>
         </section>
 
-        <section class="contact-me">
+        <section class="contact-me" id="contact-me">
             <aside class="contact-me-aside">
                 <h2>Contact Me</h2>
             </aside>
