page is structured as intended. need to work to get links working on images

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <nav class="navbar">
             <ul class="navitems">
                 <li>
-                    <a href="#about-me">About Me</a>
+                    <a class="nav-link" href="#about-me">About Me</a>
                 </li>
                 <li>
-                    <a href="#work">Work</a>
+                    <a class="nav-link" href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="#contact-me">Contact Me</a>
+                    <a class="nav-link" href="#contact-me">Contact Me</a>
                 </li>
                 <li>
-                    <a href="#">Resume</a>
+                    <a class="nav-link" href="https://github.com/jeremystevens515">Resume</a>
                 </li>
             </ul>
         </nav>
@@ -34,12 +34,7 @@
     </div>
 
     <main>
-        <!-- <aside>
-            <h2>About Me</h2>
-            <h2>Work</h2>
-            <h2>Contact Me</h2>
-        </aside> -->
-
+    
         <Section class="about-me" id="about-me">
             <aside class="about-me-aside">
                 <h2>About Me</h2>
@@ -54,26 +49,36 @@
                 <h2>Work</h2>
             </aside>
             <article class="work-box">
-                <figure id="work-big">
-                    <figcaption>MERN STACK</figcaption>
-                    <p>MERN Stack</p>
-                </figure>
-                <figure id=work-2>
-                    <figcaption>NODE/IOT</figcaption>
-                    <p>Node/IoT</p>
-                </figure>
-                <figure id="work-3">
-                    <figcaption>REACT/JAVASCRIPT/CSS</figcaption>
-                    <p>react/javascript/css</p>
-                </figure>
-                <figure id="work-4">
-                    <figcaption>MERN STACK</figcaption>
-                    <p>MERN Stack</p>
-                </figure>
-                <figure id="work-5">
-                    <figcaption>HTML/CSS</figcaption>
-                    <p>html/css</p>
-                </figure>
+                <a href="https://github.com/jeremystevens515">
+                    <figure id="work-big">
+                        <figcaption>MERN STACK</figcaption>
+                        <p>MERN Stack</p>
+                    </figure>
+                </a>
+                <a href="https://github.com/jeremystevens515">
+                    <figure id=work-2>
+                        <figcaption>NODE/IOT</figcaption>
+                        <p>Node/IoT</p>
+                    </figure>
+                </a>
+                <a href="https://github.com/jeremystevens515">
+                    <figure id="work-3">
+                        <figcaption>REACT/JAVASCRIPT/CSS</figcaption>
+                        <p>react/javascript/css</p>
+                    </figure>
+                </a>
+                <a href="https://github.com/jeremystevens515">
+                    <figure id="work-4">
+                        <figcaption>MERN STACK</figcaption>
+                        <p>MERN Stack</p>
+                    </figure>
+                </a>
+                <a href="https://github.com/jeremystevens515">
+                    <figure id="work-5">
+                        <figcaption>HTML/CSS</figcaption>
+                        <p>html/css</p>
+                    </figure>
+                </a>
             </article>
         </section>
 
@@ -83,19 +88,19 @@
             </aside>
             <ul class="contact-me-box">
                 <li>
-                    <a href="#">Number</a>
+                    <a href="https://github.com/jeremystevens515">555.555.5555</a>
                 </li>
                 <li>
-                    <a href="#">Email</a>
+                    <a href="https://github.com/jeremystevens515">Email</a>
                 </li>
                 <li>
-                    <a href="#">GitHub</a>
+                    <a href="https://github.com/jeremystevens515">GitHub</a>
                 </li>
                 <li>
-                    <a href="#">Twitter</a>
+                    <a href="https://github.com/jeremystevens515">Twitter</a>
                 </li>
                 <li>
-                    <a href="#">Spotify</a>
+                    <a href="https://github.com/jeremystevens515">Spotify</a>
                 </li>
             </ul>
         </section>
