added links to images

--- a/index.html
+++ b/index.html
@@ -49,35 +49,25 @@
                 <h2>Work</h2>
             </aside>
             <article class="work-box">
-                <a href="https://github.com/jeremystevens515">
-                    <figure id="work-big">
-                        <figcaption>MERN STACK</figcaption>
-                        <p>MERN Stack</p>
-                    </figure>
+                <a id="work-big" href="https://github.com/jeremystevens515">
+                    <figure>MERN STACK</figure>
+                    <p>MERN Stack</p>
                 </a>
-                <a href="https://github.com/jeremystevens515">
-                    <figure id=work-2>
-                        <figcaption>NODE/IOT</figcaption>
-                        <p>Node/IoT</p>
-                    </figure>
+                <a id="work-2" href="https://github.com/jeremystevens515">
+                    <figure>NODE/IOT</figure>
+                    <p>Node/IoT</p>
                 </a>
-                <a href="https://github.com/jeremystevens515">
-                    <figure id="work-3">
-                        <figcaption>REACT/JAVASCRIPT/CSS</figcaption>
-                        <p>react/javascript/css</p>
-                    </figure>
+                <a id="work-3" href="https://github.com/jeremystevens515">
+                    <figure >REACT/JAVASCRIPT/CSS</figure>
+                    <p>react/javascript/css</p>
                 </a>
-                <a href="https://github.com/jeremystevens515">
-                    <figure id="work-4">
-                        <figcaption>MERN STACK</figcaption>
-                        <p>MERN Stack</p>
-                    </figure>
+                <a id="work-4" href="https://github.com/jeremystevens515">
+                    <figure>MERN STACK</figure>
+                    <p>MERN Stack</p>
                 </a>
-                <a href="https://github.com/jeremystevens515">
-                    <figure id="work-5">
-                        <figcaption>HTML/CSS</figcaption>
-                        <p>html/css</p>
-                    </figure>
+                <a id="work-5" href="https://github.com/jeremystevens515">
+                    <figure>HTML/CSS</figure>
+                    <p>html/css</p>
                 </a>
             </article>
         </section>
