--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" type="text/css"  href="/assets/reset.css"> -->
-    <link rel="stylesheet"  href="/assets/style.css">
+    <link rel="stylesheet"  href="assets/style.css">
     <title>Jeremy Stevens Portfolio</title>
 </head>
 
